# MSBank

./: .env.example  .gitignore  Makefile  README.md  copilot-session-0773894c-65cf-41d2-b7e3-c93de6d9f490.md  docker-compose.yml  session.md
.github/prompts/: demo.md
.github/workflows/: ci.yml  dependency-review.yml  deploy.yml  images.yml
infra/docker/: docker-compose.yml
infra/k8s/: README.md
infra/observability/: README.md
infra/terraform/: README.md  backend.tf  locals.tf  main.tf  outputs.tf  (+3 more)
scripts/: smoke.sh
services/notifications-service/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
services/notifications-service/app/: __init__.py  config.py  main.py
services/notifications-service/app/api/: deps.py  routes.py  schemas.py
services/notifications-service/app/consumers/: handlers.py  kafka_consumer.py  publisher.py
services/notifications-service/app/db/: repositories.py  session.py
services/notifications-service/app/delivery/: dispatcher.py  email.py  sms.py  webhook.py
services/notifications-service/app/domain/: enums.py  models.py
services/notifications-service/app/observability/: __init__.py  logging.py  metrics.py  otel.py
services/notifications-service/app/templating/: __init__.py  render.py
services/notifications-service/migrations/: env.py
services/notifications-service/migrations/versions/: 0001_create_notifications.py  0002_add_user_created_at_index.py
services/notifications-service/templates/email/: _base.html  account_opened.html  transfer_completed.html  transfer_failed.html  welcome.html
services/notifications-service/templates/sms/: transfer_completed.txt  transfer_failed.txt
services/notifications-service/tests/: conftest.py  test_dispatcher.py  test_handlers.py  test_integration.py  test_render.py
web-portal/: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  index.html  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+310 files in other folders)
