[project]
name = "notifications-service"
version = "1.0.0"
description = "Microservice Bank — Notifications service (FastAPI, Kafka, SMTP)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "uvloop==0.20.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "SQLAlchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "aiokafka==0.11.0",
    "aiosmtplib==3.0.2",
    "httpx==0.27.2",
    "Jinja2==3.1.4",
    "python-jose[cryptography]==3.3.0",
    "cachetools==5.5.0",
    "structlog==24.4.0",
    "prometheus-client==0.21.0",
    "opentelemetry-distro==0.49b0",
    "opentelemetry-exporter-otlp==1.28.0",
    "opentelemetry-instrumentation-fastapi==0.49b0",
    "opentelemetry-instrumentation-asyncpg==0.49b0",
    "opentelemetry-instrumentation-aiokafka==0.49b0",
    "opentelemetry-instrumentation-logging==0.49b0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "aiosmtpd==1.4.6",
    "testcontainers[postgres,kafka]==4.8.1",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "types-cachetools",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC", "S", "A", "RET", "SIM", "PL"]
ignore = ["S101", "PLR0913", "S104", "PLR2004", "B008", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "PLR2004", "PLC0415"]
"migrations/*" = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
plugins = []
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
